# 519_project

./: .gitignore  readme.md
code/pico-tflmicro-main/: CMakeLists.txt  Readme.txt
code/pico-tflmicro-main/examples/hopper_sensing/: CMakeLists.txt  SparkFun_MicroPressure.h  magic_wand_model_data.cpp  magic_wand_model_data.h  main.cpp  main_functions.cpp  main_functions.h  micro_features_data.cpp  micro_features_data.h
code/pico-tflmicro-main/examples/magic_wand_ble/: imu_provider.h  main.cpp  main_functions.cpp  main_functions.h
code/pico-tflmicro-main/examples/magic_wand_ble/tusb_hid/: hid_src.cpp  hid_src.h
code/pico-tflmicro-main/include/ICM42622/: ICM42622.cpp  ICM42622.h
code/pico-tflmicro-main/src/tensorflow/lite/: portable_type_to_tflitetype.h
code/pico-tflmicro-main/src/tensorflow/lite/c/: builtin_op_data.h  common.c  common.h
code/pico-tflmicro-main/src/tensorflow/lite/core/api/: flatbuffer_conversions.cpp  flatbuffer_conversions.h
code/pico-tflmicro-main/src/tensorflow/lite/kernels/: kernel_util.cpp
code/pico-tflmicro-main/src/tensorflow/lite/kernels/internal/: common.h
code/pico-tflmicro-main/src/tensorflow/lite/micro/: all_ops_resolver.cpp  memory_helpers.cpp  micro_interpreter.cpp  micro_mutable_op_resolver.h  micro_utils.h
code/pico-tflmicro-main/src/tensorflow/lite/micro/benchmarks/: micro_benchmark.h
code/pico-tflmicro-main/src/tensorflow/lite/micro/kernels/: circular_buffer.cpp  detection_postprocess.cpp  flexbuffers_generated_data.cpp  flexbuffers_generated_data.h  fully_connected.h  kernel_runner.cpp  kernel_runner.h  quantize.cpp
code/pico-tflmicro-main/src/tensorflow/lite/micro/rp2/: debug_log.cpp  micro_time.cpp
code/pico-tflmicro-main/src/tensorflow/lite/micro/testing/: util_test.cpp
code/pico-tflmicro-main/src/tensorflow/lite/schema/: schema_generated.h  schema_utils.h
train/: README.md
train/model/: model_data.cc  model_data_better.cc
train/train/: 519_keyboard_model.ipynb  train.py
(+10 files in other folders)
